HS3- Align logo and radio buttons correctly

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -32,8 +32,8 @@ a {
 }
 
 .background-auth {
-  overflow: hidden;
-  background: url("/auth-img-bg.jpg");
+  /* overflow: hidden; */
+  background: url("/bg-image-auth.jpg");
   background-size: 100% 120%;
   object-fit: contain;
   background-repeat: no-repeat;
